update the name of the package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "download-zip-files",
+  "name": "download-zip-facilitator",
   "version": "1.0.0",
   "description": "",
   "author": "Amitt K Sharma",
