--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "files-facilitator",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "description": "",
   "author": "Amitt K Sharma",
   "license": "MIT",
@@ -22,7 +22,7 @@
     "@types/node": "14.11.2",
     "@types/react": "16.9.32"
   },
-  "main": "./bin/files-facilitator",
+  "main": "build/dist/index.js",
   "types": "build/dist/index.d.ts",
   "scripts": {
     "build": "tsc --build --force",
